# TablutChallenge

./: .gitignore  AbstractSearchEngine.hpp  AlphaBetaEngine.hpp  CMakeCache.txt  CMakeLists.txt  Connection.hpp  Fitness.hpp  GA.hpp  Heuristic.cpp  Heuristic.h  Heuristic.hpp  Makefile  MoveGenerator.cpp  MoveGenerator.h  MoveGenerator.hpp  NegaScoutEngine.hpp  NegaScoutSearch.cpp  NegaScoutSearch.h  OLD_MAIN  README.md  ResourceAllocator.hpp  SearchEngine.cpp  SearchEngine.h  SearchEngine.hpp  SearchEngine.xxcpp  SearchEngine.xxh  StopWatch.cpp  StopWatch.h  StopWatch.hpp  Tablut  Tablut.cpp  Tablut.h  Tablut.hpp  TranspositionTable.cpp  TranspositionTable.h  TranspositionTable.hpp  Zobrist.cpp  Zobrist.h  Zobrist.hpp  ai.js  (+11 more)
Abstract/: AbstractSearchEngine.hpp  TranspositionTable.hpp
Connectors/: Connection.hpp  Player.hpp
Interfaces/: IEngine.hpp  IGameState.hpp  IMoveGenerator.hpp  ITranspositionTable.hpp  IZobrist.hpp
Interfaces/Engine/: INegaScoutEngine.hpp
Lib/Abstract/: AbstractSearchEngine.hpp  TranspositionTable.hpp
Lib/Abstract/Engine/: AbstractAlphaBetaEngine.hpp  AbstractNegaScoutEngine.hpp
Lib/Connectors/: Player.hpp
Lib/GeneticAlgorithm/: Fitness.hpp  GA.hpp
Lib/Interfaces/: IEngine.hpp  IHeuristic.hpp  IMoveGenerator.hpp  ITranspositionTable.hpp
Lib/Model/: Heuristic.hpp  ResourceAllocator.hpp  StopWatch.hpp
Lib/Tablut/: Heuristic.hpp  MoveGenerator.hpp  Tablut.hpp  TablutNegaScoutEngine.hpp  Zobrist.hpp
Model/: Tablut.hpp
Model/Engine/: AlphaBetaEngine.hpp  NegaScoutEngine.hpp
connectors/: Connection.hpp  Player.hpp
(+3 files in other folders)
